--- a/package.json
+++ b/package.json
@@ -18,13 +18,23 @@
   },
   "homepage": "https://github.com/soyed/new-react-project#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/runtime": "^7.15.4",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "postcss": "^8.3.9",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^3.3.0",
+    "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
     "webpack": "^5.58.1",
     "webpack-cli": "^4.9.0",
