--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Not sure what to call it yet... or what to do yet.😭",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve",
+    "build": "NODE_ENV=production webpack",
+    "build-dev": "webpack",
+    "clean-dist": "rm -rf dist"
   },
   "repository": {
     "type": "git",
