--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^12.2.0",
     "style-loader": "^3.3.0",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3",
@@ -47,8 +49,6 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.43.3",
-    "sass-loader": "^12.2.0"
+    "react-dom": "^17.0.2"
   }
 }
