--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
