--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/runtime": "^7.15.4",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.1",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
@@ -49,9 +50,12 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.1"
   }
 }
