setting up firebase on saving user information

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "cSpell.words": [
+        "appspot",
+        "CLCL",
+        "Clld",
+        "firebaseapp",
+        "firestore",
         "getitemsbycategory",
         "getproductbyid",
+        "Lyyqi",
         "toprated"
     ]
 }
