--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "classnames": "^2.3.1",
+    "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
