refactor redux store

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     /* Type Checking */
     "strict": true, /* Enable all strict type-checking options. */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
-    "strictNullChecks": false
+    "strictNullChecks": false,
   },
   "include": [
     "src/**/*"
