--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "new-react-project",
+  "name": "e-commerce-app",
   "version": "1.0.0",
-  "description": "Not sure what to call it yet... or what to do yet.😭",
+  "description": "E-commerce Application",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
@@ -50,13 +50,15 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
     "classnames": "^2.3.1",
     "firebase": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
+    "reselect": "^4.1.0"
   }
 }
