--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     // "module": "commonjs", /* Specify what module code is generated. */
     "moduleResolution": "Node", /* Specify how TypeScript looks up a file from a given module specifier. */
     /* Specify an output folder for all emitted files. */
-    "removeComments": true, /* Disable emitting comments. */
+    "removeComments": false, /* Disable emitting comments. */
     /* Interop Constraints */
     "isolatedModules": true, /* Ensure that each file can be safely transpiled without relying on other imports. */
     "esModuleInterop": true, /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
@@ -22,6 +22,8 @@
     "strict": true, /* Enable all strict type-checking options. */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
     "strictNullChecks": false,
+    // this is need to perform dynamic imports using webpack
+    "module": "ESNext"
   },
   "include": [
     "src/**/*"
