--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "getitemsbycategory",
         "getproductbyid",
         "Lyyqi",
+        "persistor",
         "tailwindcss",
         "toprated"
     ]
