--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
-    "node-sass": "^6.0.1",
     "mini-css-extract-plugin": "^2.4.2",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.1.1",
@@ -58,6 +58,7 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.0"
   }
