clear cart and responsive login page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "getproductbyid",
         "Lyyqi",
         "persistor",
+        "Signup",
         "tailwindcss",
         "toprated"
     ]
