fixing dotenv failing to load error on netlify

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
+    "start:prod": "NODE_ENV=production webpack serve",
     "build": "NODE_ENV=production webpack",
     "build-dev": "webpack",
     "clean-dist": "rm -rf dist"
